traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:20: error: not found: value baisseBroche
  baisseBroche()
  ^